# polars-source-utils

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
polars_source_utils/: __init__.py  _internal.pyi  plan_paths.py
src/: lib.rs  plan_paths.rs
tests/: test_plan_paths.py
