[project]
name = "polars-source-utils"
version = "0.2.0"
description = "Utilities for inspecting and rewriting Polars serialized plan source paths"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["polars==1.40.0"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "polars_source_utils._internal"

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "pytest>=7.4.0"]
